name: bfh
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: faineance@users.noreply.github.com
author: faineance

executable bfh
    main-is: Main.hs
    build-depends:
        base -any,
        parsec -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
